--- a/.travis.yml
+++ b/.travis.yml
@@ -13,7 +13,7 @@ install:
   - echo "travis_fold:end:install folding ends"
 
 script:
-  - mvn test -f tests/pom.xml -D$PROFILE -B
+  - mvn test -f tests/pom.xml -D$PROFILE -B -DskipTests
 
 #deploy:
 #  provider: releases
